Fixing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,7 @@ body, h1, p, button {
   justify-content: center;
   font-family: 'Roboto Slab', serif;
   text-align: center;
+  overflow-x: hidden;
 }
 
 .hero-section .overlay {
